# football-app-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  env.example
migration/: Cargo.toml
migration/src/: lib.rs  m20250626_181911_create_competition.rs  m20250626_181911_create_leagues.rs
src/: lib.rs  main.rs
src/entity/: competitions.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  seasons.rs
src/models/: competition.rs  league.rs  mod.rs  money.rs  team.rs
src/scrapers/: league_scraper.rs  mod.rs
src/scrapers/helpers/: mod.rs  next_page.rs  table_parser.rs
src/scrapers/league/: competition_scraper.rs  league_scraper.rs  league_teams_scraper.rs  mod.rs
src/seeders/: competition_seeder.rs  mod.rs
src/utils/: client.rs  competition_type_converter.rs  db.rs  fetch_html.rs  mod.rs  parse_money.rs
