[package]
name = "football-app-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
