[package]
name = "football-app-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.11.0"
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
sea-orm-migration = { version = "1.1.12", features = ["sqlx-postgres"] }

[[bin]]
name = "football-app-api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"